[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "aiobotocore>=3.8.0",
    "pillow>=12.3.0",
    "types-aiobotocore-s3>=3.7.0",
]
